--- a/common/defaults/main.yml
+++ b/common/defaults/main.yml
@@ -1,6 +1,1 @@
-- name: bootstrapping packages
-  apt: name={{item}} state=present
-  with_items:
-  - default-jdk
-  - rsync
-# defaults file for common
+# defaults file for webserver
