--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -1,2 +1,6 @@
----
+- name: bootstrapping packages
+  apt: name={{item}} state=present
+  with_items:
+  - default-jdk
+  - rsync
 # tasks file for common
