--- a/webserver/tasks/main.yml
+++ b/webserver/tasks/main.yml
@@ -1,18 +1,15 @@
----
 - name: provisioning packages
   apt: name={{item}} state=present
   with_items:
-      - default-jdk
-      - tomcat9
-      - rsync
-  
-  - name: Transfer artifact to web
-    synchronize:
-      src: /tmp/hello-1.0.war
-      dest: /var/lib/tomcat9/webapps
-  - name: Ensure started service tomcat
-    service:
-     name: tomcat9
-     state: started
-     enabled: yes
+  - default-jdk
+  - tomcat9
+  - rsync
+
+- name: Transfer artifact to web
+  synchronize: src={{ war_file }} dest={{ dest_folder }}
+- name: Ensure started service tomcat
+  service:
+    name: tomcat9
+    state: started
+    enabled: yes
 # tasks file for webserver
