--- a/webserver/tasks/main.yml
+++ b/webserver/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: provisioning packages
-  apt: name={{item}} state=present
+  apt: name={{item}} state=present update_cache=true
   with_items:
   - default-jdk
   - tomcat9
